Switch subscriptions backend to Postgres

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,11 +1,11 @@
 PORT=8080
 
-# MySQL connection
-MYSQL_HOST=127.0.0.1
-MYSQL_PORT=3306
-MYSQL_USER=bonya
-MYSQL_PASSWORD=bonya
-MYSQL_DATABASE=bonya
+# Postgres connection
+PGHOST=127.0.0.1
+PGPORT=5432
+PGUSER=bonya
+PGPASSWORD=bonya
+PGDATABASE=bonya
 
 # CORS (comma-separated). For GitHub Pages add:
 # https://vyacheslavst.github.io
