--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,14 @@
 services:
-  mysql:
-    image: mysql:8.4
+  postgres:
+    image: postgres:16-alpine
     environment:
-      MYSQL_DATABASE: bonya
-      MYSQL_USER: bonya
-      MYSQL_PASSWORD: bonya
-      MYSQL_ROOT_PASSWORD: root
+      POSTGRES_DB: bonya
+      POSTGRES_USER: bonya
+      POSTGRES_PASSWORD: bonya
     ports:
-      - "3306:3306"
+      - "5432:5432"
     volumes:
-      - bonya_mysql:/var/lib/mysql
+      - bonya_postgres:/var/lib/postgresql/data
       - ./backend/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
 
   api:
@@ -20,18 +19,18 @@ services:
     command: sh -lc "npm install && node src/index.js"
     environment:
       PORT: 8080
-      MYSQL_HOST: mysql
-      MYSQL_PORT: 3306
-      MYSQL_USER: bonya
-      MYSQL_PASSWORD: bonya
-      MYSQL_DATABASE: bonya
+      PGHOST: postgres
+      PGPORT: 5432
+      PGUSER: bonya
+      PGPASSWORD: bonya
+      PGDATABASE: bonya
       CORS_ORIGINS: "http://localhost:5500,http://127.0.0.1:5500,http://localhost:3000,https://vyacheslavst.github.io"
     ports:
       - "8080:8080"
     depends_on:
-      - mysql
+      - postgres
 
 volumes:
-  bonya_mysql:
+  bonya_postgres:
 
 
