Support Supabase via DATABASE_URL and SSL

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,11 +1,19 @@
 PORT=8080
 
 # Postgres connection
+#
+# Option A (recommended for Supabase/Render): single connection string
+# DATABASE_URL=postgresql://USER:PASSWORD@HOST:5432/DB
+#
+# Option B: separate variables
 PGHOST=127.0.0.1
 PGPORT=5432
 PGUSER=bonya
 PGPASSWORD=bonya
 PGDATABASE=bonya
+
+# SSL (Supabase обычно требует)
+PGSSLMODE=require
 
 # CORS (comma-separated). For GitHub Pages add:
 # https://vyacheslavst.github.io
