--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-.DS_Store
-**/.DS_Store
-
+# Зависимости
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Переменные окружения
 .env
-.env.*
+.env.local
+.env.*.local
 
+# Логи
+*.log
 
+# Временные файлы
+.DS_Store
+*.swp
+*.swo
+*~
+
+# IDE
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Бэкап файлы
+*.bak
+*.backup
